Update package.json to allow for flexible versioning of React and @types/react

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/thejustinwalsh/react-uxp-spectrum#readme",
   "devDependencies": {
-    "@types/react": "^17.0.11",
+    "@types/react": ">=17.0.11",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "eslint": "7.29.0",
@@ -36,7 +36,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.1",
-    "react": "^17.0.2",
+    "react": ">=17.0.2",
     "typedoc": "^0.21.0",
     "typescript": "^4.3.4"
   }
